More tweaks, getting closer to something usable.

--- a/devoctomy.Passchamp.Windows/App.xaml
+++ b/devoctomy.Passchamp.Windows/App.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:devoctomy.Passchamp.Windows"
              xmlns:services="clr-namespace:devoctomy.Passchamp.Windows.Services"
-             StartupUri="MainWindow.xaml">
+             StartupUri="Views/Main.xaml">
     <Application.Resources>
         <services:ViewModelLocator x:Key="ViewModelLocator"/>
     </Application.Resources>
