--- a/devoctomy.Passchamp.Windows/Views/GraphTester.xaml
+++ b/devoctomy.Passchamp.Windows/Views/GraphTester.xaml
@@ -8,6 +8,39 @@
         Title="GraphTester" Height="450" Width="800"
         DataContext="{Binding GraphTesterViewModel, Source={StaticResource ViewModelLocator}}">
     <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"></RowDefinition>
+            <RowDefinition Height="*"></RowDefinition>
+        </Grid.RowDefinitions>
         
+        <Menu DockPanel.Dock="Top">
+            <MenuItem Header="_File">
+                <MenuItem Header="_Open" Command="{Binding Path=GraphBrowse}" />
+                <Separator />
+                <MenuItem Header="_Close" />
+            </MenuItem>
+        </Menu>
+
+        <Grid Grid.Row="1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto"></ColumnDefinition>
+                <ColumnDefinition Width="*"></ColumnDefinition>
+            </Grid.ColumnDefinitions>
+
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"></RowDefinition>
+                    <RowDefinition Height="*"></RowDefinition>
+                </Grid.RowDefinitions>
+
+                <ListBox Grid.Row="1" Width="200" ItemsSource="{Binding Path=Model.Pins}">
+                    <ListBox.ItemTemplate>
+                        <DataTemplate>
+                            <local:DataPinView PinName="{Binding Path=Name}" Width="180"></local:DataPinView>
+                        </DataTemplate>
+                    </ListBox.ItemTemplate>
+                </ListBox>
+            </Grid>
+        </Grid>
     </Grid>
 </Window>
