--- a/devoctomy.Passchamp.Windows/Views/DataPinView.xaml
+++ b/devoctomy.Passchamp.Windows/Views/DataPinView.xaml
@@ -5,15 +5,19 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:devoctomy.Passchamp.Windows.Views"
              xmlns:vm="clr-namespace:devoctomy.Passchamp.Windows.ViewModels"
+             xmlns:vc="clr-namespace:devoctomy.Passchamp.Windows.ValueConverters"
              mc:Ignorable="d" 
              d:DesignHeight="32" d:DesignWidth="800">
+    <UserControl.Resources>
+        <vc:DataPinValueConverter x:Key="DataPinValueConverter" />
+    </UserControl.Resources>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"></RowDefinition>
             <RowDefinition Height="Auto"></RowDefinition>
         </Grid.RowDefinitions>
 
-        <TextBlock x:Name="NameBlock" Text="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type UserControl}}, Path=PinName}"></TextBlock>
-        <TextBox Grid.Row="1"></TextBox>
+        <TextBlock x:Name="NameBlock" Text="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type UserControl}}, Path=DataPin.Name, Mode=OneTime}"></TextBlock>
+        <TextBox Grid.Row="1" Text="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type UserControl}}, Path=DataPin.Value, Mode=TwoWay, Converter={StaticResource DataPinValueConverter}}"></TextBox>
     </Grid>
 </UserControl>
