--- a/devoctomy.Passchamp.Windows/Views/DataPinView.xaml
+++ b/devoctomy.Passchamp.Windows/Views/DataPinView.xaml
@@ -18,13 +18,6 @@
         </Grid.RowDefinitions>
 
         <TextBlock x:Name="NameBlock" Text="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type UserControl}}, Path=DataPin.Name, Mode=OneTime}"></TextBlock>
-        <TextBox Grid.Row="1">
-            <TextBox.Text>
-                <MultiBinding Converter="{StaticResource DataPinValueConverter}">
-                    <Binding RelativeSource="{RelativeSource FindAncestor, AncestorType={x:Type UserControl}}" Path="DataPin"/>
-                    <Binding RelativeSource="{RelativeSource FindAncestor, AncestorType={x:Type UserControl}}" Path="DataPin.Value" Mode="OneTime"/>
-                </MultiBinding>
-            </TextBox.Text>
-        </TextBox>
+        <TextBox Grid.Row="1" Text="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type UserControl}}, Path=DataPin.Value, Mode=TwoWay, Converter={StaticResource DataPinValueConverter}}"></TextBox>
     </Grid>
 </UserControl>
