--- a/devoctomy.Passchamp.Windows/Views/DataPinView.xaml
+++ b/devoctomy.Passchamp.Windows/Views/DataPinView.xaml
@@ -7,7 +7,8 @@
              xmlns:vm="clr-namespace:devoctomy.Passchamp.Windows.ViewModels"
              xmlns:vc="clr-namespace:devoctomy.Passchamp.Windows.ValueConverters"
              mc:Ignorable="d" 
-             d:DesignHeight="32" d:DesignWidth="800">
+             d:DesignHeight="32" d:DesignWidth="800"
+             d:Background="White">
     <UserControl.Resources>
         <vc:DataPinValueConverter x:Key="DataPinValueConverter" />
     </UserControl.Resources>
