--- a/devoctomy.Passchamp.Client/AppShell.xaml
+++ b/devoctomy.Passchamp.Client/AppShell.xaml
@@ -4,13 +4,14 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local="clr-namespace:devoctomy.Passchamp.Client"
+    xmlns:pages="clr-namespace:devoctomy.Passchamp.Client.Pages"
     Shell.FlyoutBehavior="Flyout">
 
     <FlyoutItem FlyoutDisplayOptions="AsMultipleItems">
         <ShellContent
-            Title="Home"
-            ContentTemplate="{DataTemplate local:MainPage}"
-            Route="MainPage" />
+            Title="Vaults"
+            ContentTemplate="{DataTemplate pages:VaultsPage}"
+            Route="Vaults" />
     </FlyoutItem>
 
     <ShellContent
