--- a/devoctomy.Passchamp.Client/Pages/VaultsPage.xaml
+++ b/devoctomy.Passchamp.Client/Pages/VaultsPage.xaml
@@ -2,8 +2,10 @@
 <pages:BasePage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:vm="clr-namespace:devoctomy.Passchamp.Client.ViewModels;assembly=devoctomy.Passchamp.Client"
+             xmlns:vault="clr-namespace:devoctomy.Passchamp.Core.Vault;assembly=devoctomy.Passchamp.Core"
              xmlns:pages="clr-namespace:devoctomy.Passchamp.Client.Pages.Base"
              x:Class="devoctomy.Passchamp.Client.Pages.VaultsPage"
+             x:DataType="vm:VaultsViewModel"
              x:TypeArguments="vm:VaultsViewModel"
              Title="Vaults">
     <pages:BasePage.Content>
@@ -11,7 +13,7 @@
                 ItemsSource="{Binding Vaults}"
                 SelectedItem="{Binding ItemSelected, Mode=TwoWay}">
             <ListView.ItemTemplate>
-                <DataTemplate>
+                <DataTemplate x:DataType="vault:Vault">
                     <ViewCell Height="128">
                         <VerticalStackLayout>
                             <Label Text="{Binding Header.FormatVersion}"></Label>
