--- a/devoctomy.Passchamp.Client/Pages/SettingsPage.xaml
+++ b/devoctomy.Passchamp.Client/Pages/SettingsPage.xaml
@@ -1,20 +1,32 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <pages:BasePage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:vm="clr-namespace:devoctomy.Passchamp.Client.ViewModels;assembly=devoctomy.Passchamp.Client"
-             xmlns:pages="clr-namespace:devoctomy.Passchamp.Client.Pages.Base"
-             x:Class="devoctomy.Passchamp.Client.Pages.SettingsPage"
-             x:DataType="vm:SettingsViewModel"
-             x:TypeArguments="vm:SettingsViewModel"
-             Title="Settings">
+                xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+                xmlns:vm="clr-namespace:devoctomy.Passchamp.Client.ViewModels;assembly=devoctomy.Passchamp.Client"
+                xmlns:cloud="clr-namespace:devoctomy.Passchamp.Core.Cloud;assembly=devoctomy.Passchamp.Core"
+                xmlns:pages="clr-namespace:devoctomy.Passchamp.Client.Pages.Base"
+                xmlns:converters="clr-namespace:devoctomy.Passchamp.Client.Converters"
+                x:Class="devoctomy.Passchamp.Client.Pages.SettingsPage"
+                x:DataType="vm:SettingsViewModel"
+                x:TypeArguments="vm:SettingsViewModel"
+                Title="Settings">
+    <pages:BasePage.Resources>
+        <converters:ProviderServiceTypeIdToDisplayNameConverter x:Key="ProviderServiceTypeIdToDisplayNameConverter" />
+    </pages:BasePage.Resources>
     <VerticalStackLayout>
         <Label Text="Cloud Storage Providers" Style="{StaticResource MediumLabelStyle}"></Label>
-        <HorizontalStackLayout>
-            <Button Text="Add"
-                    Command="{Binding AddCloudStorageProviderCommand}"></Button>
-            <Button Text="Remove"
-                    Command="{Binding RemoveSelectedCloudStorageProviderCommand}"
-                    IsEnabled="{Binding RemoveSelectedCloudStorageProviderCommandCanExecute}"></Button>
-        </HorizontalStackLayout>
+        <ListView
+                ItemsSource="{Binding CloudStorageProviderConfigRefs}"
+                SelectedItem="{Binding SelectedCloudStorageProviderConfigRef, Mode=TwoWay}">
+            <ListView.ItemTemplate>
+                <DataTemplate x:DataType="cloud:CloudStorageProviderConfigRef">
+                    <ViewCell Height="128">
+                        <VerticalStackLayout>
+                            <Label Text="{Binding ProviderServiceTypeId, Converter={StaticResource ProviderServiceTypeIdToDisplayNameConverter}}"></Label>
+                            <Label Text="{Binding Id}"></Label>
+                        </VerticalStackLayout>
+                    </ViewCell>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
     </VerticalStackLayout>
 </pages:BasePage>
