--- a/devoctomy.Passchamp.Client/Pages/CloudStorageProviderEditorPage.xaml
+++ b/devoctomy.Passchamp.Client/Pages/CloudStorageProviderEditorPage.xaml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8" ?>
-<popups:BasePopup xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+<pages:BasePage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:popups="clr-namespace:devoctomy.Passchamp.Client.Popups.Base"
+             xmlns:pages="clr-namespace:devoctomy.Passchamp.Client.Pages.Base"
              xmlns:vm="clr-namespace:devoctomy.Passchamp.Client.ViewModels;assembly=devoctomy.Passchamp.Client"
-             x:Class="devoctomy.Passchamp.Client.Popups.CloudStorageProviderEditor"
+             x:Class="devoctomy.Passchamp.Client.Pages.CloudStorageProviderEditorPage"
              x:DataType="vm:CloudStorageProviderEditorViewModel"
              x:TypeArguments="vm:CloudStorageProviderEditorViewModel"
-             CanBeDismissedByTappingOutsideOfPopup="False">
+             Title="CloudStorageProviderEditorPage">
     <VerticalStackLayout BackgroundColor="Black">
         <Label Text="Cloud Storage Provider" Style="{StaticResource LargeLabelStyle}"></Label>
         <Label Text="Display Name" Style="{StaticResource MediumLabelStyle}"></Label>
@@ -33,5 +33,6 @@
         <Entry
             MaxLength="20"
             Text="{Binding Path, Mode=TwoWay}" />
+        <Button Text="OK" Command="{Binding OkCommand}"></Button>
     </VerticalStackLayout>
-</popups:BasePopup>
+</pages:BasePage>
