Added config removal with covering tests for loader service as well as edit button for settings view.

--- a/devoctomy.Passchamp.Client/Pages/SettingsPage.xaml
+++ b/devoctomy.Passchamp.Client/Pages/SettingsPage.xaml
@@ -21,6 +21,11 @@
                 Command="{Binding AddCloudStorageProviderCommand}">
             </ImageButton>
             <ImageButton
+                Source="data_edit_dark.png"
+                WidthRequest="48"
+                Command="{Binding EditSelectedCloudStorageProviderCommand}">
+            </ImageButton>            
+            <ImageButton
                 Source="garbage_closed_dark.png"
                 WidthRequest="48"
                 Command="{Binding RemoveSelectedCloudStorageProviderCommand}">
