--- a/devoctomy.Passchamp.Client/App.xaml
+++ b/devoctomy.Passchamp.Client/App.xaml
@@ -2,7 +2,8 @@
 <Application xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:devoctomy.Passchamp.Client"
-             x:Class="devoctomy.Passchamp.Client.App">
+             x:Class="devoctomy.Passchamp.Client.App"
+             UserAppTheme="Dark">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
