--- a/devoctomy.Passchamp.Client/Pages/CloudStorageProviderEditorPage.xaml
+++ b/devoctomy.Passchamp.Client/Pages/CloudStorageProviderEditorPage.xaml
@@ -3,7 +3,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:pages="clr-namespace:devoctomy.Passchamp.Client.Pages.Base"
              xmlns:vm="clr-namespace:devoctomy.Passchamp.Client.ViewModels;assembly=devoctomy.Passchamp.Client"
-             xmlns:converters="clr-namespace:devoctomy.Passchamp.Client.Converters"
+             xmlns:converters="clr-namespace:devoctomy.Passchamp.Maui.Converters;assembly=devoctomy.Passchamp.Maui"
+             xmlns:behaviors="clr-namespace:CommunityToolkit.Maui.Behaviors;assembly=CommunityToolkit.Maui"
              x:Class="devoctomy.Passchamp.Client.Pages.CloudStorageProviderEditorPage"
              x:DataType="vm:CloudStorageProviderEditorViewModel"
              x:TypeArguments="vm:CloudStorageProviderEditorViewModel"
@@ -35,28 +36,55 @@
             <Label Text="Display Name" Style="{StaticResource MediumLabelStyle}"></Label>
             <Entry
                 MaxLength="64"
-                Text="{Binding DisplayName, Mode=TwoWay}" />
+                Text="{Binding DisplayName, Mode=TwoWay}">
+                <Entry.Behaviors>
+                    <behaviors:EventToCommandBehavior EventName="TextChanged" Command="{Binding ValidateInputCommand}" />
+                </Entry.Behaviors>
+            </Entry>
             <Label Text="Access Id" Style="{StaticResource MediumLabelStyle}"></Label>
             <Entry
                 MaxLength="20"
-                Text="{Binding AccessId, Mode=TwoWay}" />
+                Text="{Binding AccessId, Mode=TwoWay}">
+                <Entry.Behaviors>
+                    <behaviors:EventToCommandBehavior EventName="TextChanged" Command="{Binding ValidateInputCommand}" />
+                </Entry.Behaviors>
+            </Entry>
             <Label Text="Secret Key" Style="{StaticResource MediumLabelStyle}"></Label>
             <Entry
                 MaxLength="20"
-                Text="{Binding SecretKey, Mode=TwoWay}"/>
+                Text="{Binding SecretKey, Mode=TwoWay}">
+                <Entry.Behaviors>
+                    <behaviors:EventToCommandBehavior EventName="TextChanged" Command="{Binding ValidateInputCommand}" />
+                </Entry.Behaviors>
+            </Entry>
             <Label Text="Region" Style="{StaticResource MediumLabelStyle}"></Label>
             <Picker
                 ItemsSource="{Binding Regions, Mode=OneWay}"
-                SelectedItem="{Binding Region, Mode=TwoWay}"></Picker>
+                SelectedItem="{Binding Region, Mode=TwoWay}">
+                <Picker.Behaviors>
+                    <behaviors:EventToCommandBehavior EventName="SelectedIndexChanged" Command="{Binding ValidateInputCommand}" />
+                </Picker.Behaviors>
+            </Picker>
             <Label Text="Bucket" Style="{StaticResource MediumLabelStyle}"></Label>
             <Entry
                 MaxLength="20"
-                Text="{Binding Bucket, Mode=TwoWay}" />
+                Text="{Binding Bucket, Mode=TwoWay}">
+                <Entry.Behaviors>
+                    <behaviors:EventToCommandBehavior EventName="TextChanged" Command="{Binding ValidateInputCommand}" />
+                </Entry.Behaviors>
+            </Entry>
             <Label Text="Path" Style="{StaticResource MediumLabelStyle}"></Label>
             <Entry
                 MaxLength="20"
-                Text="{Binding Path, Mode=TwoWay}" />
-            <Button Text="OK" Command="{Binding OkCommand}"></Button>
+                Text="{Binding Path, Mode=TwoWay}">
+                <Entry.Behaviors>
+                    <behaviors:EventToCommandBehavior EventName="TextChanged" Command="{Binding ValidateInputCommand}" />
+                </Entry.Behaviors>
+            </Entry>
+            <Button
+                Text="OK"
+                Command="{Binding OkCommand}"
+                IsEnabled="{Binding OkCommandEnabled}"></Button>
         </VerticalStackLayout>
     </Grid>
 </pages:BasePage>
