--- a/devoctomy.Passchamp.Client/Pages/CloudStorageProviderEditorPage.xaml
+++ b/devoctomy.Passchamp.Client/Pages/CloudStorageProviderEditorPage.xaml
@@ -18,11 +18,12 @@
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="48"></ColumnDefinition>
                 <ColumnDefinition Width="*"></ColumnDefinition>
+                <ColumnDefinition Width="48"></ColumnDefinition>
             </Grid.ColumnDefinitions>
             <ImageButton
-                    Source="command_undo_dark.png"
-                    WidthRequest="48"
-                    Command="{Binding BackCommand}">
+                Source="command_undo_dark.png"
+                WidthRequest="48"
+                Command="{Binding BackCommand}">
             </ImageButton>
             <Label
                 Grid.Column="1"
@@ -30,7 +31,15 @@
                 Style="{StaticResource LargeLabelStyle}"
                 VerticalOptions="CenterAndExpand"
                 HorizontalTextAlignment="Start"
-                Margin="16,0,0,0"></Label>
+                Margin="16,0,0,0">
+            </Label>
+            <ImageButton
+                Grid.Column="2"
+                Source="check_dark.png"
+                WidthRequest="48"
+                Command="{Binding OkCommand}"
+                IsEnabled="{Binding OkCommandEnabled}">
+            </ImageButton>
         </Grid>
         <VerticalStackLayout Grid.Row="1" BackgroundColor="Black">
             <Label Text="Display Name" Style="{StaticResource MediumLabelStyle}"></Label>
@@ -81,10 +90,6 @@
                     <behaviors:EventToCommandBehavior EventName="TextChanged" Command="{Binding ValidateInputCommand}" />
                 </Entry.Behaviors>
             </Entry>
-            <Button
-                Text="OK"
-                Command="{Binding OkCommand}"
-                IsEnabled="{Binding OkCommandEnabled}"></Button>
         </VerticalStackLayout>
     </Grid>
 </pages:BasePage>
